--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 kafka.bootstrapAddress=localhost:9092
-message.topic.name=baeldung
+message.topic.name=loitest
 greeting.topic.name=greeting
 filtered.topic.name=filtered
 partitioned.topic.name=partitioned
